# Fungit-back

./: API.py  Api.py  Connection.py  ImageDAO.py  MushroomDAO.py  README.md  RequestHandler.py  UserDAO.py  pyproject.toml  requirements.txt
entities/: images.py  mushroom.py  search.py  user.py
