[project]
name = "fungit-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.3.5",
    "tensorflow>=2.20.0",
]
